# hellodebhs

./: Hello.hs  LICENSE  README.md  Setup.lhs  Vagrantfile  hellodebhs.cabal
config/: foofile
debian/: changelog  control  files  haskell-hellodebhs-utils.install  haskell-hellodebhs-utils.substvars  rules  watch
debian/haskell-hellodebhs-utils/DEBIAN/: control  md5sums
debian/haskell-hellodebhs-utils/usr/share/doc/haskell-hellodebhs-utils/: copyright
